<resources>
    <string name="app_name">GroceryStoreClothes</string>
    <string name="add_user">Add User</string>
    <string name="logout">LogOut</string>
    <string name="add_new_product">Add new product</string>
    <string name="welcome">Jay Swaminarayan..!</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_product_price">Enter product price</string>
    <string name="add_product">Add Product</string>
    <string name="create_bill">Create Bill</string>
    <string name="print_bill">Print Bill</string>
    <string name="clear_all"><u>Clear Al</u>l</string>
    <string name="view_all_bill">View All Bill</string>
</resources>